Upgrade to Spring Boot 2.7